# SweetEditor-Qt

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
Demo/: DemoWindow.cpp  DemoWindow.h  main.cpp
SweetEditorQt/: CMakeLists.txt
SweetEditorQt/include/: DecorationProvider.h  EditorMetadata.h  NewLineActionProvider.h  Perf.h  SweetEditorWidget.h
SweetEditorQt/src/: EditorRenderer.cpp  EditorRenderer.h  QtTextMeasurer.cpp  SweetEditorWidget.cpp
SweetEditorQt/src/completion/: CompletionPopupController.cpp  CompletionProviderManager.h
SweetEditorQt/src/newline/: NewLineActionProviderManager.cpp  NewLineActionProviderManager.h
demo/: CMakeLists.txt  DemoWindow.cpp  main.cpp
include/: CompletionProvider.h  EditorIconProvider.h  EditorSettings.h  EditorTheme.h  LanguageConfiguration.h  SweetEditorWidget.h
scripts/: depoly-dist.ps1
src/: EditorRenderer.cpp  EditorRenderer.h  QtTextMeasurer.cpp  QtTextMeasurer.h  SweetEditorWidget.cpp
src/completion/: CompletionPopupController.h  CompletionProviderManager.cpp
src/decoration/: DecorationProviderManager.cpp  DecorationProviderManager.h
src/perf/: PerfOverlay.cpp
